--- a/core/catalog/include_dept_start.phtml
+++ b/core/catalog/include_dept_start.phtml
@@ -5,6 +5,7 @@
 <!--#INCLUDE File="../../util/xt_func_util.phtml" -->
 <!--#INCLUDE FILE="../../util/xt_func_string.phtml"-->
 <!--#INCLUDE FILE="../../util/xt_func_seo.phtml"-->
+<!--#INCLUDE FILE="../../util/xt_func_shoppingcart.phtml"-->
 <!--#INCLUDE FILE="../../i_initsession.phtml"-->
 <!--#INCLUDE FILE="../i_login.phtml"-->
 <script language="VBScript" RUNAT=SERVER>
