--- a/core/include_index_start.phtml
+++ b/core/include_index_start.phtml
@@ -7,6 +7,7 @@
 <!--#INCLUDE FILE="../util/xt_func_string.phtml"-->
 <!--#INCLUDE FILE="../util/xt_func_seo.phtml"-->
 <!--#INCLUDE FILE="../util/xt_func_shopper.phtml"-->
+<!--#INCLUDE FILE="../util/xt_func_shoppingcart.phtml"-->
 <%	
 
 	if Len(Request("DEBUGMODE")) > 0 then
