--- a/core/checkout/include_login_start.phtml
+++ b/core/checkout/include_login_start.phtml
@@ -4,6 +4,7 @@
 <!--#INCLUDE FILE="../../util/xt_func_session.phtml"-->
 <!--#INCLUDE FILE="../../util/xt_func_string.phtml"-->
 <!--#INCLUDE FILE="../../util/xt_func_util.phtml"-->
+<!--#INCLUDE FILE="../../util/xt_func_shoppingcart.phtml"-->
 <%
 	sessionID = Request("sessionID")
 	sessionID = FilterSessionString(sessionID)
@@ -25,4 +26,5 @@
 	returnPage = Trim(Request("returnPage"))
 	returnPage = FilterXSS(returnPage)
 	st = Trim(Request("st"))
+	error_msg= FilterXSS(Trim(Request("error")))
 %>
