--- a/core/include_error404_start.phtml
+++ b/core/include_error404_start.phtml
@@ -4,7 +4,7 @@
 <!--#INCLUDE FILE="../util/xt_func_session.phtml"-->
 <!--#INCLUDE FILE="../util/xt_func_util.phtml" -->
 <!--#INCLUDE FILE="../util/xt_func_string.phtml"-->
-
+<!--#INCLUDE FILE="../util/xt_func_shoppingcart.phtml"-->
 <%
 	page_content_404 = GetSettingText("PAGE_CONTENT_404", "")
 %>
