--- a/theme/marketshop1/custom/include_latest.phtml
+++ b/theme/marketshop1/custom/include_latest.phtml
@@ -86,7 +86,7 @@
 						ssImg = Replace(cloudImg, "upload/", ssImgSize)
 					end if
 				else
-					ssImg = "http://a4.res.cloudinary.com/dd3llssvr/image/fetch/" & "w_" & "200" & ",h_" & "200" & ",c_pad,c_fill/" & g_store_url & "assets/pmedia/prod_img/" & Server.URLEncode(prod_thumb_image)
+					ssImg = "http://a4.res.cloudinary.com/dd3llssvr/image/fetch/" & "w_" & "50" & ",h_" & "50" & ",c_pad/" & g_store_url & "assets/pmedia/prod_img/" & Server.URLEncode(custom_prod_thumb_image)
 				end if
 				
 				'====================================================================================================
